# TIM-VX

./: CMakeLists.txt  README.md
cmake/: synap.cmake
src/tim/: CMakeLists.txt
src/tim/synap/: CMakeLists.txt  execution.cc  execution_private.h  handle.cc  handle_private.h
src/tim/vx/: context.cc
src/tim/vx/synap/: CMakeLists.txt
